--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     line-height: 1.5;
     /* 4. Improve text rendering */
     -webkit-font-smoothing: antialiased;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* 5. Improve media defaults */
@@ -76,6 +77,12 @@ h6 {
 
 /* Custom CSS by Colin Toomey */
 
+/* making h3 font-weight a bit thinner. I could have changed the h3 into ps but i am lazy */
+h3 {
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
 /* custom font for logo */
 @font-face {
     font-family: norse-bold;
@@ -91,9 +98,9 @@ body {
 .main-container {
     display: flex;
     flex-direction: row;
-    gap: 4rem;
     height: 100vh;
     width: 100vw;
+    background-color: whitesmoke;
 }
 
 /* Style for the logo container */
@@ -108,13 +115,15 @@ body {
 
 .logo {
     width: 100%;
-    height: 20%;
-    background-color: black;
-    opacity: 45%;
+    height: 15%;
+    background-color: rgba(0, 0, 0, .5);
+    /* opacity: 45%; */
     position: relative;
-    top: 25%;
+    top: 20%;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo-text {
@@ -124,8 +133,8 @@ body {
 }
 
 #odin-logo {
-    height: 50%;
-    width: 50%;
+    height: 75%;
+    width: auto;
 }
 
 .cred {
@@ -156,6 +165,7 @@ body {
     flex-grow: 1;
     height: 100%;
     width: 100%;
+    background-color: whitesmoke;
 }
 
 /* form styles */
@@ -163,13 +173,87 @@ body {
 .form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
+    background-color: white;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    box-shadow: 0px 5px 10px gray;
 }
 
-.form-row-1,
-.form-row-2,
-.form-row-3 {
-    display: flex;
-    flex-direction: row;
+.left-input {
+    float: left;
+    width: 45%;
+}
+
+.right-input {
+    float: left;
+    width: 45%;
+}
+
+input,
+label {
+    display: block;
+}
+
+input {
+    border: 1px solid #E5E7EB;
+    margin-bottom: 1rem;
+    border-radius: 4px;
+    margin-left: 3rem;
+    width: 75%;
+
+}
+
+label {
+    margin-left: 3rem;
+    margin-bottom: 0;
+}
+
+input:invalid {
+    border: 1px solid red;
+}
+
+input:focus {
+    border: 1px solid skyblue;
+    box-shadow: 2px 3px 10px gray;
+}
+
+.form-header {
+    margin-left: 3rem;
+    margin-bottom: 2rem;
+    text-align: justify;
+}
+
+.text {
+    margin-left: 3rem;
+    margin-bottom: 3rem;
+    width: 75%;
+}
+
+.text>h3 {
+    margin-bottom: 2rem;
+}
+
+/* buttons */
+button {
+    background-color: #596D48;
+    color: white;
+    border: none;
+    font-weight: 700;
+    border-radius: 7px;
+    padding: 0.5rem 2rem;
+    margin-left: 3rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.buttons>p {
+    margin-left: 3rem;
+}
+
+.login-button {
+    color: #596D48;
+    text-decoration: none;
+    font-weight: 700;
 }
